visibility issue fixed

--- a/front-end/src/containers/navBar/Nav.css
+++ b/front-end/src/containers/navBar/Nav.css
@@ -9,7 +9,7 @@
     flex-direction: row;
     align-items: center;
     color: #333745;
-    z-index: 20;
+    z-index: 40;
 }
 
 .logo {
